.k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-app
  namespace: ${KUBERNETES_NAMESPACE}
  labels:
    app: ${APP_NAME}-app
    service: app
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ${APP_NAME}-app
      service: app
  template:
    metadata:
      labels:
        app: ${APP_NAME}-app
        service: app
    spec:
      containers:
        - name: ${APP_NAME}-app
          image: ${IMAGE_TAG}
          command:
            - /bin/sh
            - '-c'
            - yarn start:app
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 2Gi
