.k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}-ui
  namespace: ${KUBERNETES_NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-${LETSENCRYPT_STAGE}'
    acme.cert-manager.io/http01-edit-in-place: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - ${BASE_URL}
      secretName: ${BASE_URL}-tls
  rules:
    - host: ${BASE_URL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}-ui
                port:
                  number: 80
